@startuml
class Cat {
  - name: string
  - age: int
  + Cat(name, age)
  + getName(): string
  + getAge(): int
  + eat(): void
  + meow(): void
  + sleep(): void
  + play(): void
  + print_info(): void
}

class Sphynx {
  - bodytemp: double
  - lvl: int
  + Sphynx(name, age, bodytemp, lvl)
  + find_place(): void
  + bathe(): void
  + meow(): void
  + play(): void
  + print_info(): void
}

class Persian {
  - fur_len: double
  - activ: string
  - a: int
  - s: string
  + Persian(name, age, fur_len, activ)
  + Persian(name, age, fur_len, activ, a) 
  + Persian(name, int age, fur_len, activ, s) 
  + show_walk(): void
  + grooming(): void
  + meow(): void
  + play(): void
  + print_info(): void
}

Cat <|-- Sphynx
Cat <|-- Persian
@enduml